[package]
name = "breazy"
description = "A wrapper around Bevy for easier game development."
keywords = ["bevy", "game-development", "graphics", "wrapper"]
categories = ["game-development"]
version = "0.2.0"
license = "MIT"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
bevy_vector_shapes = "0.11.0"